RESOLVED FIXED80203
REGRESSION (r109022): Files dragged onto input controls cannot be read due to sandbox violation
https://bugs.webkit.org/show_bug.cgi?id=80203
Summary REGRESSION (r109022): Files dragged onto input controls cannot be read due to...
Alexey Proskuryakov
Reported 2012-03-02 16:46:58 PST
Steps to reproduce: try to attach a file from desktop to this bug by dragging it onto a file upload control. Results: submission will hang; there will be a sandbox violation in console.
Attachments
test (12 bytes, text/plain)
2012-03-07 13:23 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 13:48 PST, Enrica Casucci
no flags
Test case (316 bytes, text/html)
2012-03-07 16:17 PST, Enrica Casucci
no flags
Test (12 bytes, text/plain)
2012-03-07 16:26 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 16:29 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 16:32 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 16:37 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 16:46 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-07 17:09 PST, Enrica Casucci
no flags
test (12 bytes, text/plain)
2012-03-08 10:06 PST, Enrica Casucci
no flags
Patch (2.31 KB, patch)
2012-03-08 17:03 PST, Enrica Casucci
ap: review+
test file (6 bytes, text/plain)
2012-03-12 14:53 PDT, Tim Horton
no flags
test (12 bytes, text/plain)
2012-03-14 13:33 PDT, Enrica Casucci
no flags
Alexey Proskuryakov
Comment 1 2012-03-02 16:47:29 PST
Enrica Casucci
Comment 2 2012-03-06 11:47:24 PST
I tried with r109827 and I cannot reproduce the problem. The steps I've used are the following: 1. Open https://bugs.webkit.org/show_bug.cgi?id=80203 2. Click on Add an attachment 3. Drag a file over the "Choose File" button and drop it. Result The file is attached as expected. I don't see any Sandbox violation in the console. Please let me know how to reproduce the problem.
Alexey Proskuryakov
Comment 3 2012-03-06 20:07:59 PST
*** Bug 80475 has been marked as a duplicate of this bug. ***
Enrica Casucci
Comment 4 2012-03-07 13:23:38 PST
Enrica Casucci
Comment 5 2012-03-07 13:48:13 PST
Enrica Casucci
Comment 6 2012-03-07 16:17:00 PST
Created attachment 130717 [details] Test case
Enrica Casucci
Comment 7 2012-03-07 16:26:49 PST
Enrica Casucci
Comment 8 2012-03-07 16:29:31 PST
Enrica Casucci
Comment 9 2012-03-07 16:32:55 PST
Enrica Casucci
Comment 10 2012-03-07 16:37:08 PST
Enrica Casucci
Comment 11 2012-03-07 16:46:03 PST
Enrica Casucci
Comment 12 2012-03-07 17:09:22 PST
Enrica Casucci
Comment 13 2012-03-08 10:06:39 PST
Enrica Casucci
Comment 14 2012-03-08 17:03:41 PST
Alexey Proskuryakov
Comment 15 2012-03-08 18:41:01 PST
Comment on attachment 130939 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=130939&action=review r=me as a quick&dirty fix. > Source/WebKit2/WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:158 > + // FIXME: this needs to be replaced with the code below, once we resolve the sandboxing issue. I'd have added a bug link, as "the issue" may be ambiguous to some readers.
Enrica Casucci
Comment 16 2012-03-09 10:00:06 PST
Tim Horton
Comment 17 2012-03-12 14:53:39 PDT
Created attachment 131420 [details] test file
Enrica Casucci
Comment 18 2012-03-14 13:33:24 PDT
Note You need to log in before you can comment on or make changes to this bug.