REGRESSION (r109022): Files dragged onto input controls cannot be read due to sandbox violation. https://bugs.webkit.org/show_bug.cgi?id=80203 <rdar://problem/10976643>

Reviewed by Alexey Proskuryakov.

This patch reverts a small part fo r109022, leaving access to
NSPasteboard in the WebProcess when retrieving pathnames for
files being dragged. This avoid the sandbox violation until we
implement a mechanism to provide a sandbox extension to the WebProcess.

* WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
(WebKit::WebPlatformStrategies::getPathnamesForType):



Canonical link: https://commits.webkit.org/97899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110303 268f45cc-cd09-0410-ab3c-d52691b4dbfc